--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,27 +4,28 @@
         "reports": "Reports",
         "controls": "Controls"
     },
-    "actions": {
-        "createNew": "Create new",
-        "delete": "Delete",
-        "cancel": "Cancel"
-    },
-    "dialog": {
-        "title": {
-            "delete": "Delete '{{what}}'"
-        },
-        "message": {
-            "delete": "Are you sure you want to delete '{{what}}'? This will delete all resources associated with it and cannot be undone. Make sure this is something you really want to do!"
-        }
-    },
     "terms": {
+        "name": "Name",
+        "description": "Description",
+        "owner": "Owner",
         "controls": "Controls",
         "businessServices": "Business services",
         "stakeholders": "Stakeholders",
         "stakeholderGroups": "Stakeholder groups",
-        "tags": "Tags",
-        "name": "Name",
-        "description": "Description",
-        "owner": "Owner"
+        "tags": "Tags"
+    },
+    "actions": {
+        "delete": "Delete",
+        "cancel": "Cancel",
+        "createNew": "Create new"
+    },
+    "dialog": {
+        "title": {
+            "delete": "Delete '{{what}}'",
+            "newBusinessService": "New business service"
+        },
+        "message": {
+            "delete": "Are you sure you want to delete '{{what}}'? This will delete all resources associated with it and cannot be undone. Make sure this is something you really want to do!"
+        }
     }
 }
