--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,7 +20,7 @@
         "cancel": "Cancel",
         "createNew": "Create new",
         "create": "Create",
-        "save": "New"
+        "save": "Save"
     },
     "dialog": {
         "title": {
